--- a/about.Rmd
+++ b/about.Rmd
@@ -4,6 +4,6 @@ title: "About"
 
 ### About this site
 
-Sometimes you need to say a bit about the site -- how it was made, where it's hosted, where the source code can be found. 
+This site is built under R version 3.5.1 and Rstudio 1.1.442.
 
-If this is for a project or analysis, I recommend giving some details about the R package versions that you used to create the content.
+For the complete code, please refer to [my personal website code](https://github.com/ChristineLong/ChristineLong.github.io.git)
