--- a/index.Rmd
+++ b/index.Rmd
@@ -2,6 +2,9 @@
 title: "Hi, I'm Yuelin Long"
 ---
 
+
+<img src="P4221858.jpg" style="width:70%">
+
 &nbsp;
 &nbsp;
 &nbsp;
@@ -10,3 +13,5 @@ title: "Hi, I'm Yuelin Long"
 &nbsp;
 
 **Associate Statistician / Data Scientist / Problem Solver / Active Thinker**
+
+
