--- a/project.Rmd
+++ b/project.Rmd
@@ -1,38 +1,11 @@
 ---
 title: "Projects"
 ---
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
 
 
-### Interactive Data Visualization: Online Grocery Shopping Report
+###Sample Projects
++ Interactive Data Visualization Using Online Shopping Data
 
-```{r echo=FALSE, message=FALSE}
-#Load neccessary library
-library(tidyverse)
-library(viridis)
-library(p8105.datasets)
-library(plotly)
-```
-
-```{r echo=FALSE, warning=FALSE}
-#First plot: Show the order and reordered percentage of different aisles, colored by different departments
-instacart %>% 
-  group_by(aisle,department) %>% 
-  summarise(order_n = n(), reorder_n = sum(reordered)) %>% 
-  mutate(text_label = str_c("Aisle: ", aisle, '\nDepartment: ', department), order_percent = order_n/nrow(instacart), reorder_perent = reorder_n/order_n) %>% 
-  plot_ly(x = ~ order_percent, y = ~ reorder_perent, 
-         type = "scatter", mode = "markers", 
-         alpha = 0.8,
-         color = ~department,
-         text = ~text_label) %>%
-  layout(title = "Order and Reorder perccentage of Aisles", xaxis = list(title = "Order Percentage of Aisles"), yaxis = list(title = "Reordered Percentage of Aisles"))
-```
 
 &nbsp;
 &nbsp;
@@ -40,34 +13,7 @@ instacart %>%
 &nbsp;
 &nbsp;
 &nbsp;
-
-```{r echo=FALSE, warning=FALSE}
-#Second plot: order amount with the hours of the day for different days of the week
-instacart %>% 
-  mutate(order_dow = recode(order_dow, '0' = "Sunday", '1' = "Monday", '2' = "Tuesday", '3' = "Wednesday", '4' = "Thursday", '5' = "Friday", '6' = "Saturday"), 
-         order_dow = factor(order_dow,  levels = c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"))) %>% 
-  group_by(order_dow, order_hour_of_day) %>% 
-  summarise(total_order = n()) %>% 
-  mutate(text_label = str_c("Hour: ", order_hour_of_day, '\nDay: ', order_dow)) %>% 
-  plot_ly(x = ~ order_hour_of_day, y = ~ total_order, 
-         type = "scatter", mode = "lines", 
-         color = ~order_dow,
-         text = ~text_label) %>%
-  layout(title = 'Order Amount Through Out the Day', xaxis = list(title = "Order Hour"), yaxis = list(title = "Order Amount"))
-```
-
-
-```{r echo=FALSE, warning=FALSE}
-#Third plot: best-selling products in the best selling aisle and worst selling products in the worst selling products (best/worst-selling considered both order and reordered)
-instacart %>% 
-  filter(aisle == "fresh fruits") %>% 
-  count(product_name) %>% 
-  mutate(product_name_fct = fct_reorder(product_name, n)) %>% 
-  filter(min_rank(desc(n)) < 20) %>% 
-  plot_ly(x = ~product_name_fct, y = ~n, color = ~product_name, type = "bar") %>%
-  layout(title = 'Best-selling products in Fresh Fruit Aisle', xaxis = list(title = "Product Name"), yaxis = list(title = "Order Amount"))
-
-```
+&nbsp;
 
 
 ### Clinical, biochemical and genetic features of patients with mitochondrial diseases
