--- a/project.Rmd
+++ b/project.Rmd
@@ -10,6 +10,9 @@ title: "Projects"
 ### Sample Projects
 
 [Interactive Data Visualization Using Online Shopping Data](datavis.html)
+&nbsp;
+
+[Gun Violence in the United States](https://eshea6.github.io/us_gun_violence.github.io/index.html)
 
 
 &nbsp;
