--- a/project.Rmd
+++ b/project.Rmd
@@ -10,9 +10,10 @@ title: "Projects"
 ### Sample Projects
 
 [Interactive Data Visualization Using Online Shopping Data](datavis.html)
+
 &nbsp;
 
-[Gun Violence in the United States](https://eshea6.github.io/us_gun_violence.github.io/index.html)
+[Gun Violence in the United States](https://eshea6.github.io/us_gun_violence.github.io/index.html) with regression and data visualization
 
 
 &nbsp;
