--- a/public.Rmd
+++ b/public.Rmd
@@ -1,12 +1,16 @@
 ---
 title: "Publications"
 ---
+
+Published with name as Long Y
+
 &nbsp;
 &nbsp;
 &nbsp;
 &nbsp;
 &nbsp;
 &nbsp;
+
 
 **[Retrospective Natural History of Thymidine Kinase 2 Deficiency](https://jmg.bmj.com/content/55/8/515.long) \ \ \ \ \ \ Journal of Medical Genetics  **  <br /> 
 Garone C, et al, Long Y, Rahman S, Donati MA, DiMauro S, Hirano M.
