--- a/resume.Rmd
+++ b/resume.Rmd
@@ -36,17 +36,20 @@ B.S. \ \ \ \ \ \ Sep 2010 – Jun 2014
 ### Associate Statistician  
 Columbia University Medical Center 
 
-+	Build regression models using demographic, diagnostic and genetic information to predict potential patients or patients' future conditions with glmnet package in R   <br /> 
++	Applied regression models using demographic, diagnostic and genetic information to identify potential patients or patients' future conditions with R glmnet and dplyr   <br /> 
++	Select best predictive models in classification or regression analysis using AIC or adjusted R2   <br /> 
++	Develop different statistical tests, including two sample t-test, chi-square test and Fisher Exact test, to choose a better treatment, and adjust p values for multiple comparisons   <br />  
 +	Calculate sample size through power calculation and adjust p values for multiple comparisons   <br /> 
-+	Select best predictive models in classification or regression analysis, and develop two sample t-test to choose a better strategy for patient treatments  <br /> 
-+	Prepare statistical reports on descriptive analysis and presented with data visualizations (ggplot2 in R)
++	Prepare statistical reports on descriptive analysis and presented with data visualizations (ggplot2 in R)   <br /> 
+
 
 ### Associate Researcher II
 Mount Sinai Health System 
 
-+	Supported target identification, prioritization and validation to neurodegenerative diseases research unit   <br /> 
-+	Applied data transformation and developed machine learning models with 200,000+ records, including random forest, logistic regression and SVM to understand disease mechanisms     <br /> 
-+	Built predictive models to understand the role of different types of influences in diseases using Python pandas and scikit-learn     <br /> 
++ Supported data mining and exploration to understand disease mechanisms with 200,000+ records   <br /> 
++ Proceed literature review and data mining to generate important feature lists, and used feature selection to reduce model complexity and training time   <br /> 
++ Built predictive models understand the role of different leading factors in neurological diseases using Python numpy, pandas and scikit-learn   <br /> 
+
 
 &nbsp;
 &nbsp;
