--- a/public.Rmd
+++ b/public.Rmd
@@ -16,7 +16,7 @@ Published with name as Long Y
 Garone C, et al, Long Y, Rahman S, Donati MA, DiMauro S, Hirano M.
 
 **Clinical, biochemical and genetic features of patients with mitochondrial diseases: Data from the North American Mitochondrial Disease Consortium (NAMDC) registry**  \ \ \ \ Submitted to JAMA Neurology on August 23rd.
-Barca E, Cooley V, Schoenaker R, Emmanuele V, DiMauro S, Long Y, et al.
+Barca E, Long Y, Schoenaker R, Emmanuele V, DiMauro S, Cooley V, et al.
 
 **[Systematic investigations of different cytosine modifications on CpG dinucleotide sequences: the effects on the B-Z transition](https://pubs.acs.org/doi/abs/10.1021/ja4107012)\ \ \ \ \ \ Journal of the American Chemical Society **   <br />
 Wang S, Long Y, Wang J, Ge Y, Guo P, Liu Y, Tian T, Zhou X
